# sigma-pure-gps-cli-rs

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  Cross.toml  LICENSE  README.md  TODO.md
.github/workflows/: main.yaml  release.yml
scripts/: generate_bitmaps.sh
src/: decoder.rs  device.rs  downloader.rs  elevation.rs  gpx.rs  main.rs  util.rs
src/commands/: agps_date.rs  delete_tracks.rs  download.rs  download_agps.rs  download_tracks.rs  download_tracks_raw.rs  get_settings.rs  get_sleep_screen.rs  get_totals.rs  get_waypoint.rs  info.rs  list_ports.rs  mod.rs  set_home_altitude.rs  set_sleep_screen.rs  set_waypoint.rs  update.rs
src/protocol/: commands.rs  mod.rs
