[package]
name = "sigma-pure-gps-updater"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "sigma-pure-gps-updater"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.13.3", features = [
    "rustls",
], default-features = false }
serialport = "4"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
indicatif = "0.18.4"
chrono = "0.4"
