[package]
name = "sigma-pure-gps-cli"
version = "0.4.0"
edition = "2024"
authors = ["psytraxx"]
license = "MIT"
repository = "https://github.com/psytraxx/sigma-pure-gps-cli-rs"
description = "Command-line tool for managing Sigma Sport Pure GPS (GPS10) via USB"

[[bin]]
name = "sigma-pure-gps-cli"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.52.2", features = ["full"] }
reqwest = { version = "0.13.3", features = [
    "rustls",
    "json",
], default-features = false }
serialport = "4"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
indicatif = "0.18.4"
chrono = "0.4"
quick-xml = { version = "0.39.3", features = ["serialize"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dotenvy = "0.15"
png = "0.18.1"

[dev-dependencies]
tempfile = "3"
